@@ -8,18 +8,13 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk3d.h,v 1.9 2010/04/20 15:14:29 nijtmans Exp $
+ * RCS: @(#) $Id: tk3d.h,v 1.10 2010/04/23 08:32:56 nijtmans Exp $
  */
 
 #ifndef _TK3D
 #define _TK3D
 
 #include "tkInt.h"
-
-#ifdef BUILD_tk
-# undef TCL_STORAGE_CLASS
-# define TCL_STORAGE_CLASS DLLEXPORT
-#endif
 
 /*
  * One of the following data structures is allocated for each 3-D border
@@ -88,8 +83,5 @@ typedef struct TkBorder {
 MODULE_SCOPE TkBorder	*TkpGetBorder(void);
 MODULE_SCOPE void	TkpGetShadows(TkBorder *borderPtr, Tk_Window tkwin);
 MODULE_SCOPE void	TkpFreeBorder(TkBorder *borderPtr);
-
-# undef TCL_STORAGE_CLASS
-# define TCL_STORAGE_CLASS DLLIMPORT
 
 #endif /* _TK3D */
