@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkButton.h,v 1.18 2010/02/18 22:31:31 nijtmans Exp $
+ * RCS: @(#) $Id: tkButton.h,v 1.19 2010/04/23 08:32:56 nijtmans Exp $
  */
 
 #ifndef _TKBUTTON
@@ -17,11 +17,6 @@
 
 #ifndef _TKINT
 #include "tkInt.h"
-#endif
-
-#ifdef BUILD_tk
-# undef TCL_STORAGE_CLASS
-# define TCL_STORAGE_CLASS DLLEXPORT
 #endif
 
 /*
@@ -325,8 +320,5 @@ MODULE_SCOPE void 	TkpDestroyButton(TkButton *butPtr);
 MODULE_SCOPE void	TkpDisplayButton(ClientData clientData);
 #endif
 MODULE_SCOPE int	TkInvokeButton(TkButton *butPtr);
-
-# undef TCL_STORAGE_CLASS
-# define TCL_STORAGE_CLASS DLLIMPORT
 
 #endif /* _TKBUTTON */
