@@ -8,18 +8,13 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkColor.h,v 1.12 2010/04/20 15:14:29 nijtmans Exp $
+ * RCS: @(#) $Id: tkColor.h,v 1.13 2010/04/23 08:32:56 nijtmans Exp $
  */
 
 #ifndef _TKCOLOR
 #define _TKCOLOR
 
 #include "tkInt.h"
-
-#ifdef BUILD_tk
-#undef TCL_STORAGE_CLASS
-#define TCL_STORAGE_CLASS DLLEXPORT
-#endif
 
 /*
  * One of the following data structures is used to keep track of each color
@@ -78,8 +73,5 @@ MODULE_SCOPE void	TkpFreeColor(TkColor *tkColPtr);
 #endif
 MODULE_SCOPE TkColor *	TkpGetColor(Tk_Window tkwin, Tk_Uid name);
 MODULE_SCOPE TkColor *	TkpGetColorByValue(Tk_Window tkwin, XColor *colorPtr);
-
-#undef TCL_STORAGE_CLASS
-#define TCL_STORAGE_CLASS DLLIMPORT
 
 #endif /* _TKCOLOR */
